# cistern-rs

./: .gitignore  Cargo.toml  README.md
examples/: knowledge.rs  test_kv.rs  test_rag.rs
src/: error.rs  lib.rs  prelude.rs
src/cistern/: backend.rs  mod.rs
src/context/: mod.rs  record.rs
src/kv/: mod.rs  table.rs
src/rag/: mod.rs  record.rs  table.rs
